--- a/src/index.css
+++ b/src/index.css
@@ -102,8 +102,44 @@ path {
   animation: draw 3s ease forwards;
 }
 
+
+
 @keyframes draw {
   to {
     stroke-dashoffset: 0;
   }
+}
+
+
+.addanimation {
+  width: 0%;
+  animation: moveBall 3s ease-out forwards;
+  background-color: #131d13;
+  
+}
+
+@keyframes moveBall {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0.5;
+    scale: 0.8;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.appear-animation {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 30%;
 }
